# auth-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  compose.yaml  docker-compose.build.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  deploy.yml  python-client-publish.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_user_preferences.py  b7c8d9e0f1a2_unify_passwordless_identity.py  c542006e6b13_initial_tables.py  c8d9e0f1a2b3_add_auth_generation.py  d9e0f1a2b3c4_add_refresh_token_sid.py  f1a2b3c4d5e6_add_refresh_token_rotated_at_grace.py
app/: config.py  database.py  main.py
app/models/: __init__.py
app/routers/: admin.py  auth.py  oauth.py  password_auth.py
app/schemas/: __init__.py
app/security/: __init__.py  deps.py  jwt_handler.py  password.py  revocation.py
app/services/: auth_service.py  email_login_service.py  email_sender.py  email_usage.py  identity_service.py  oauth_clients.py  oauth_service.py  session_service.py
auth-client/: LICENSE  MANIFEST.in  README.md  pyproject.toml
auth-client/auth/: __init__.py  dependencies.py  validator.py
auth-client/auth_service_client/: __init__.py  dependencies.py  validator.py
auth-client/scripts/: check_dist.py
auth-client/tests/: test_clock_skew_leeway.py  test_optional_fastapi.py  test_package_metadata.py  test_require_token_type.py
docs/: ARCHITECTURE.md  AUTH_CONTRACT.md  CODING_CONVENTIONS.md  INTEGRATION_GUIDE.md  ONBOARDING.md  SELF_HOSTING.md
examples/: backend_fastapi_integration.py  frontend_auth_utils.ts  frontend_sso_integration.ts  moviemate_backend.py
scripts/: bootstrap.py  check_architecture.py  generate_keys.py  init_admin.py
tests/: conftest.py  test_auth_code.py  test_auth_generation.py  test_authorize.py  test_bootstrap.py  test_callback_threading.py  test_capabilities_readiness.py  test_client_ip_sanitize.py  test_config.py  test_container_distribution.py  test_deploy_workflow.py  test_email_headless.py  test_email_login.py  test_email_sender_preflight.py  test_generate_keys.py  test_get_current_user_revocation.py  test_google_auth_url.py  test_headless_origin_policy.py  test_identity_unification.py  test_init_admin.py  test_logout.py  test_oauth_callback_session.py  test_oauth_callback_state_loss.py  test_oauth_state.py  test_open_source_baseline.py  test_password_auth_routing.py  test_pkce.py  test_redirect_uri_policy.py  test_redis_session.py  test_refresh_rotation_grace.py  test_resend_email_usage.py  test_session_service.py  test_sid_session_reconcile.py  test_token_cookie_alias.py  test_token_pkce.py  test_trusted_jwks.py  test_trusted_userinfo_fallback.py  test_user_access_revocation.py
(+5 files in other folders)
