[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seanfield-auth-client"
version = "0.3.0"
description = "Lightweight JWT validator for services using Auth Service"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Auth Service contributors" }]
keywords = ["authentication", "jwt", "jwks", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "PyJWT[crypto]>=2.13.0",
    "httpx>=0.25.0",
    "cryptography>=48.0.1",
]

[project.urls]
Homepage = "https://github.com/HyxiaoGe/auth-service/tree/main/auth-client"
Documentation = "https://github.com/HyxiaoGe/auth-service/tree/main/auth-client"
Source = "https://github.com/HyxiaoGe/auth-service"
Issues = "https://github.com/HyxiaoGe/auth-service/issues"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]

[tool.setuptools.packages.find]
include = ["auth_service_client*"]

[tool.setuptools.package-data]
auth_service_client = ["py.typed"]
